@@ -43,6 +43,10 @@ BOOST_WAVE_DECL boost::wave::token_id scan(Scanner *s);
 }   // namespace wave
 }   // namespace boost
 
+#ifdef BOOST_MSVC
+#pragma warning(pop)
+#endif
+
 // the suffix header occurs after all of the code
 #ifdef BOOST_HAS_ABI_HEADERS
 #include BOOST_ABI_SUFFIX
